--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,10 +30,10 @@ models:
           +materialized: table   
         int_direct_relationships:
           # required for BigQuery and Redshift for performance/memory reasons
-          +materialized: "{{ 'table' if target.type in ['bigquery', 'redshift', 'databricks'] else 'view' }}"
+          +materialized: "{{ 'table' if target.type in ['bigquery', 'redshift', 'databricks', 'sqlserver'] else 'view' }}"
         int_all_dag_relationships:
           # required for BigQuery, Redshift, and Databricks for performance/memory reasons
-          +materialized: "{{ 'table' if target.type in ['bigquery', 'redshift', 'databricks', 'clickhouse'] else 'view' }}"
+          +materialized: "{{ 'table' if target.type in ['bigquery', 'redshift', 'databricks', 'clickhouse', 'sqlserver'] else 'view' }}"
       dag:
         +materialized: table
     staging:
